--- a/index.html
+++ b/index.html
@@ -2,20 +2,70 @@
 <html>
 
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Haptic Experience</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-    integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-    integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-    crossorigin="anonymous"></script>
+    <meta charset="utf-8" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width;initial-scale=1.0;maximum-scale=1.0;user-scalable=0;" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+    <title>Haptic Experience</title>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://unpkg.com/bootstrap@4.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/colorPick.css">
+    <link rel="stylesheet" href="css/colorPick.dark.theme.css">
+    <link rel="stylesheet" href="css/rangeslider.min.css">
+    <script src="js/jqScribble/jquery.jqscribble.js" type="text/javascript"></script>
+    <script src="js/jqScribble/jqscribble.extrabrushes.js" type="text/javascript"></script>
+    <script src="js/colorPick.min.js" type="text/javascript"></script>
+    <script src="js/rangeslider.min.js" type="text/javascript"></script>
+
+
 </head>
 
 <body>
-  <div class='container'>
-    $CONTENT
-  </div>
+
+    <div id="content">
+        <div class="picker"></div>
+        <div id="slider_2" style="width:400px; max-width:100%; margin:auto"></div>
+        <canvas id="scribblePad"></canvas>
+    </div>
+
+
+    <script>
+        var onMove = function(e, percentage) {
+            $("#scribblePad").data("jqScribble").update({
+                brushSize: 1 + (percentage / 3)
+            });
+        }
+
+        $(document).ready(function() {
+            $("#scribblePad").jqScribble();
+
+            $(".picker").colorPick({
+                'initialColor': '#8e44ad',
+                'palette': ['#FFFFFF', "#1abc9c", "#16a085", "#2ecc71", "#27ae60", "#3498db", "#2980b9", "#9b59b6", "#8e44ad", "#34495e", "#2c3e50", "#f1c40f", "#f39c12", "#e67e22", "#d35400", "#e74c3c", "#c0392b", "#ecf0f1"],
+                'onColorSelected': function() {
+                    this.element.css({
+                        'backgroundColor': this.color,
+                        'color': this.color
+                    });
+                    $("#scribblePad").data("jqScribble").update({
+                        brushColor: this.color
+                    });
+                }
+            });
+
+
+            new RangeSlider($("#slider_2"), {
+                percentage: 3,
+                onMove: onMove,
+                onDown: onMove
+            });
+
+        });
+    </script>
+
 </body>
 
 </html>
