--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/colorPick.css">
     <link rel="stylesheet" href="css/colorPick.dark.theme.css">
     <link rel="stylesheet" href="css/rangeslider.min.css">
+    <link rel="manifest" href="manifest.json">
     <script src="js/jqScribble/jquery.jqscribble.js" type="text/javascript"></script>
     <script src="js/jqScribble/jqscribble.extrabrushes.js" type="text/javascript"></script>
     <script src="js/colorPick.min.js" type="text/javascript"></script>
