--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/colorPick.css">
     <link rel="stylesheet" href="css/colorPick.dark.theme.css">
     <link rel="stylesheet" href="css/rangeslider.min.css">
+    <link rel="stylesheet" href="css/lig.css">
     <script src="js/jqScribble/jquery.jqscribble.js" type="text/javascript"></script>
     <script src="js/jqScribble/jqscribble.extrabrushes.js" type="text/javascript"></script>
     <script src="js/colorPick.min.js" type="text/javascript"></script>
@@ -27,19 +28,44 @@
 
 <body>
 
-    <div id="overlay">
+    <!-- <div >
         <button id="overlay-button" type="button" class="btn btn-success" onclick="off()">Start Drawing</button>
+    </div> -->
+
+    <div class="container" id="overlay">
+        <div class="row">
+
+            <div class="gallery">
+
+                <figure>
+                    <img src="./images/a.png" alt="" />
+                    <figcaption>Daytona Beach <small>United States</small></figcaption>
+                </figure>
+
+                <figure>
+                    <img src="./images/b.png" alt="" />
+                    <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
+                </figure>
+            </div>
+        </div>
     </div>
 
     <div id="content">
         <div class="picker"></div>
         <div id="slider_2" style="width:400px; max-width:100%; margin:auto"></div>
         <span id="status"></span>
-        <canvas id="scribblePad" style="background: url('./images/android-chrome-512x512.png')"></canvas>
+        <canvas id="scribblePad" style="background: url('./images/a.png')"></canvas>
     </div>
 
-
     <script>
+        $('figure').click(function() {
+            //popup.open($(this));
+            $("#scribblePad").jqScribble({
+                backgroundImage: $(this).find('img')[0].src
+            });
+            off();
+        });
+
         function off() {
             $('#overlay').attr('style', 'display:none');
         }
@@ -51,9 +77,7 @@
         }
 
         $(document).ready(function() {
-            $("#scribblePad").jqScribble({
-                backgroundImage: 'images/android-chrome-512x512.png'
-            });
+            $("#scribblePad").jqScribble();
 
             $(".picker").colorPick({
                 'initialColor': '#8e44ad',
