--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body style="width: 100%;">
 
     <main role="main">
         <div class="album py-5 bg-light">
@@ -61,7 +61,7 @@
         </div>
     </main>
 
-    <div class="container overlay" id="lower" style="display: none;">
+    <div class="container overlay" id="lower" style="display: none;width: 100%;max-width: inherit;">
         <div class="row">
             <div class="gallery">
                 <figure>
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div class="container overlay" id="upper" style="display: none;">
+    <div class="container overlay" id="upper" style="display: none;width: 100%;max-width: inherit;">
         <div class="row">
             <div class="gallery">
                 <figure>
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-    <div class="container overlay" id="numbers" style="display: none;">
+    <div class="container overlay" id="numbers" style="display: none;width: 100%;max-width: inherit;">
         <div class="row">
             <div class="gallery">
                 <figure>
