Add refresh button

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
     <div id="content" style="display: none;">
         <div class="picker"></div>
+        <button class="refresh" style="background-image: url(./images/refresh.png);" onclick="window.location.reload();"></button>
         <canvas id="scribblePad"></canvas>
     </div>
 
@@ -125,7 +126,7 @@
             });
 
             $(".picker").colorPick({
-                'initialColor': '#8e44ad',
+                'initialColor': '#2ecc71',
                 'palette': ['#FFFFFF', "#1abc9c", "#16a085", "#2ecc71", "#27ae60", "#3498db", "#2980b9", "#9b59b6", "#8e44ad", "#34495e", "#2c3e50", "#f1c40f", "#f39c12", "#e67e22", "#d35400", "#e74c3c", "#c0392b", "#ecf0f1"],
                 'onColorSelected': function() {
                     this.element.css({
