--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
                     <img src="./images/numbers/7.png">
                 </figure>
                 <figure>
+                    <img src="./images/numbers/7..png">
+                <figure>
                     <img src="./images/numbers/8.png">
                 </figure>
                 <figure>
