--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                 <figure>
                     <img src="./images/numbers/7..png">
                 <figure>
+                <figure>
                     <img src="./images/numbers/8.png">
                 </figure>
                 <figure>
