--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </figure>
                 <figure>
                     <img src="./images/numbers/7..png">
-                <figure>
+                </figure>
                 <figure>
                     <img src="./images/numbers/8.png">
                 </figure>
